Reformat and cleanup
(cherry picked from commit 7d7fd8114df9b37add26d7e6a09aed1cf0ed2abd)